--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
-		"@rainbow-me/rainbowkit": "^0.1.1",
 		"autoprefixer": "^10.4.7",
-		"ethers": "^5.6.7",
+		"connectkit": "^0.0.1",
+		"ethers": "^5.6.9",
 		"next": "12.1.6",
+		"next-themes": "^0.2.0",
 		"postcss": "^8.4.14",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
 		"tailwindcss": "^3.0.24",
-		"wagmi": "^0.4.1"
+		"wagmi": "^0.6.2"
 	},
 	"devDependencies": {
 		"@types/node": "^17.0.35",
