--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "dapp-starter",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -11,21 +11,21 @@
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
 		"autoprefixer": "^10.4.7",
-		"connectkit": "^0.0.2",
-		"ethers": "^5.7.1",
-		"next": "12.1.6",
+		"connectkit": "^1.4.0",
+		"next": "^13.4.10",
 		"next-themes": "^0.2.0",
 		"postcss": "^8.4.14",
-		"react": "18.1.0",
-		"react-dom": "18.1.0",
-		"tailwindcss": "^3.0.24",
-		"wagmi": "^0.6.7"
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"tailwindcss": "^3.3.3",
+		"viem": "^1.3.0",
+		"wagmi": "^1.3.0"
 	},
 	"devDependencies": {
 		"@types/node": "^17.0.35",
 		"@types/react": "^18.0.9",
-		"eslint": "8.16.0",
-		"eslint-config-next": "12.1.6",
-		"typescript": "^4.6.4"
+		"eslint": "^8.45.0",
+		"eslint-config-next": "^13.4.10",
+		"typescript": "^5.1.6"
 	}
 }
