[chore] pages -> app directory

--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
 		"@heroicons/react": "^1.0.6",
 		"autoprefixer": "^10.4.7",
 		"connectkit": "^1.4.0",
+		"encoding": "^0.1.13",
+		"lokijs": "^1.5.12",
 		"next": "^13.4.10",
 		"next-themes": "^0.2.0",
+		"pino-pretty": "^10.0.1",
 		"postcss": "^8.4.14",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
